[tool.poetry]
name = "ast-xpath"
version = "0.1.0"
description = "Use XPath to query Python Abstract Source Trees"
authors = ["Ellis Percival <ast-xpath@failcode.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
